Implement pagination for GET: /rides api
